Fix blue button text on mobile browsers

--- a/static/style.css
+++ b/static/style.css
@@ -69,6 +69,7 @@ nav {
 nav button {
     padding: 0.75rem 1.25rem;
     font-size: 1rem;
+    color: black;
     background: none;
     border: 1px solid black;
     cursor: pointer;
